# StellarStream

./: .gitignore  COPY_RIPPLE_SUMMARY.md  EVENTS.md  docker-compose.yml  package-lock.json  package.json
contracts/: Cargo.toml
contracts/src/: allowlist_test.rs  clawback_test.rs  dispute_test.rs  errors.rs  interest.rs  lib.rs  math.rs  oracle.rs  precision_test.rs  rbac.rs  storage.rs  test.rs  topup_test.rs  ttl_stress_test.rs  types.rs  upgrade_test.rs  vault.rs  voting.rs  voting_test.rs
contracts/test_snapshots/clawback_test/: test_clawback_after_partial_withdrawal.1.json  test_clawback_requires_compliance_officer_role.1.json  test_governance_clawback.1.json
contracts/test_snapshots/soulbound_test/: test_create_normal_stream_not_soulbound.1.json  test_create_soulbound_stream.1.json  test_get_soulbound_streams_index.1.json  test_soulbound_flag_immutable_after_creation.1.json  test_soulbound_stream_cancellable_by_sender.1.json  test_soulbound_stream_still_withdrawable.1.json  test_transfer_receiver_allowed_on_normal_stream.1.json  test_transfer_receiver_blocked_on_soulbound.1.json
contracts/test_snapshots/test/: test_approve_already_executed_proposal.1.json  test_approve_proposal.1.json  test_approve_proposal_emits_event.1.json  test_batch_stream_creation.1.json  test_cancel_emits_event.1.json  test_cancellation_split.1.json  test_cannot_transfer_receipt_to_restricted_address.1.json  test_cliff_blocks_withdrawal.1.json  test_cliff_unlocks_at_cliff_time.1.json  test_create_direct_stream.1.json  test_create_proposal.1.json  test_create_stream_emits_event.1.json  (+20 more)
(+89 files in other folders)
